src/objects/Renewal_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Renewal_Notification_1_Day__c</fullName>
        <label>Renewal Notification 1 Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Notification_2_Days__c</fullName>
        <label>Renewal Notification 2 Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Notification_3_Days__c</fullName>
        <label>Renewal Notification 3 Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Outbound_Case_Days__c</fullName>
        <label>Renewal Outbound Case Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Renewal Setting</label>
    <nameField>
        <label>Renewal Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>